objects/AFSC__FSFileScanLog__c.object
<CustomObject>
    <description>F-Secure Cloud Protection: File scan events log</description>
    <fields>
        <fullName>AFSC__Action__c</fullName>
        <label>Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Date_Time_Scanned__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AFSC__Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Upload</fullName>
                </value>
                <value>
                    <fullName>Scan Job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__File_Extension__c</fullName>
        <label>File Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Parent_Id__c</fullName>
        <label>File Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Prevalence_Desc1__c</fullName>
        <formula>IF(ISBLANK(AFSC__File_Reputation_Rating__c),&apos;Unknown&apos;,
IF(AFSC__File_Prevalence__c = 0, &quot;Unknown&quot;,
IF(AFSC__File_Prevalence__c &lt; 10, &quot;Unique&quot;,
IF(AFSC__File_Prevalence__c &lt; 30, &quot;Very rare&quot;,
IF(AFSC__File_Prevalence__c &lt; 50, &quot;Rare&quot;,
IF(AFSC__File_Prevalence__c &lt; 80, &quot;Common&quot;,
IF(AFSC__File_Prevalence__c &lt; 100, &quot;Very common&quot;,
&quot;Universal&quot;
)
)
)
)
)
)
)</formula>
        <label>File Prevalence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Prevalence_Desc__c</fullName>
        <label>File Prevalence Desc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Common</fullName>
                </value>
                <value>
                    <fullName>Rare</fullName>
                </value>
                <value>
                    <fullName>Unique</fullName>
                </value>
                <value>
                    <fullName>Universal</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Very common</fullName>
                </value>
                <value>
                    <fullName>Very rare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__File_Prevalence__c</fullName>
        <label>File Prevalence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Reputation_Desc1__c</fullName>
        <formula>IF(AFSC__File_Reputation_Rating__c &lt; 0, &quot;Unknown&quot;,
IF(AFSC__File_Reputation_Rating__c &lt; 10, &quot;Clean&quot;,
IF(AFSC__File_Reputation_Rating__c &lt; 90, &quot;Suspicious&quot;,
IF(AFSC__File_Reputation_Rating__c &lt; 101, &quot;Malicious&quot;,
&quot;Unknown&quot;
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Reputation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Reputation_Desc__c</fullName>
        <label>File Reputation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clean</fullName>
                </value>
                <value>
                    <fullName>Malicious</fullName>
                </value>
                <value>
                    <fullName>Not available</fullName>
                </value>
                <value>
                    <fullName>Suspicious</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__File_Reputation_Rating__c</fullName>
        <label>File Reputation Rating</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Type__c</fullName>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Version__c</fullName>
        <label>File Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Full_File_Name__c</fullName>
        <label>Full File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Infection_Name2__c</fullName>
        <label>Infection Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Infection_Name__c</fullName>
        <label>Infection Name DEPRECATED</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Ip_address__c</fullName>
        <label>IP address</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Is_Download__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AFSC__Period__c</fullName>
        <formula>IF(AFSC__Date_Time_Scanned__c &gt; NOW() - 7, &quot;This week&quot;,
IF(AFSC__Date_Time_Scanned__c &gt; NOW() - 30, &quot;This month&quot;,
&quot;From the very beginning&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Record_Id__c</fullName>
        <description>Reference either to ContentVersion or to Attachment.</description>
        <label>DEPRECATED Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Ref_Content_Document_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ref Content Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Ref_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Replacement_File_Id__c</fullName>
        <label>Replacement File Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__SHA__c</fullName>
        <externalId>true</externalId>
        <label>SHA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Scan_Type__c</fullName>
        <label>Scan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__Scanbox_Result__c</fullName>
        <label>Scanbox Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clean</fullName>
                </value>
                <value>
                    <fullName>Whitelisted</fullName>
                </value>
                <value>
                    <fullName>Infected</fullName>
                </value>
                <value>
                    <fullName>Suspected</fullName>
                </value>
                <value>
                    <fullName>Grayware</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__Sha1__c</fullName>
        <label>DEPRECATED SHA1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Source__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Status__c</fullName>
        <description>Help field to get status icon based on action and verdict values. Value of this field is the name of the icon in the package.</description>
        <formula>IF (OR(ISPICKVAL(AFSC__Verdict__c, &apos;Error&apos;), ISPICKVAL(AFSC__Verdict__c, &apos;Unknown&apos;)), &apos;unknown&apos;,
  IF (OR(AFSC__Action__c = &apos;Removed&apos;, AFSC__Action__c = &apos;Quarantined&apos;), &apos;warning&apos;, 
    IF (AND(AFSC__Action__c = &apos;Passed&apos;, ISPICKVAL(AFSC__Verdict__c, &apos;Safe&apos;)), &apos;ok&apos;,
      &apos;block&apos;
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__User_Name__c</fullName>
        <formula>AFSC__User__r.FirstName + &apos; &apos; + AFSC__User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>File_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AFSC__Verdict__c</fullName>
        <label>Verdict</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Safe</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Unsafe</fullName>
                </value>
                <value>
                    <fullName>Disallowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>File Scan</label>
    <listViews>
        <fullName>AFSC__all</fullName>
        <columns>NAME</columns>
        <columns>AFSC__File_Name__c</columns>
        <columns>AFSC__Ref_Record_Id__c</columns>
        <columns>AFSC__Scan_Type__c</columns>
        <columns>AFSC__Verdict__c</columns>
        <columns>AFSC__User__c</columns>
        <columns>AFSC__Source__c</columns>
        <columns>AFSC__Date_Time_Scanned__c</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>